# audio

./: .gitignore  README.md
velvet_noise/: CMakeLists.txt
velvet_noise/src/cli/: main.cpp
velvet_noise/src/dsp/: GaloisNoiser.h  GenerateNoise.cpp  GenerateNoise.h  NoiseFrame.h
velvet_noise/src/io/: WriteAudio.cpp  WriteAudio.h
yacynth/: CMakeLists.txt  CMakeLists_gcc.txt  README.md  TODO  compasm.sh  run_cmake.sh
yacynth/doc/allpass-param/: inf.txt
yacynth/include/: Controllers.h  Serialize.h  Tags.h  ToneShaper.h  TuningConst.h  TypeNames.h  protocol.h  v4.h  yacynth_config.h  yacynth_globals.h
yacynth/src/: CMakeLists.txt  Makefile
yacynth/src/configs/: Serialize.cpp  YsifIIO.cpp  YsifIIO.h  newproperties.properties
yacynth/src/control/: Controllers.cpp  Controllers.h  Nsleep.cpp  Nsleep.h  Presets.cpp  Setting.cpp  Setting.h  StaticEffects.cpp  Statistics.cpp  Statistics.h  SynthFrontend.cpp  SynthFrontend.h  Sysman.cpp  Sysman.h  ThreadControl.cpp  ThreadControl.h  Timer.h  global.cpp  global.h  main.cpp  sha3.c
yacynth/src/effects/: AmplitudeModulator.h  ChannelMix.cpp  ChannelMix.h  Comb.cpp  Comb.h  CombInterpolated.cpp  CombInterpolated.h  ControlArray.h  DelayTap.h  Echo.cpp  Echo.h  EffectBase.cpp  EffectBase.h  EffectOscillator.h  EmptyBuffer.cpp  Filter.cpp  Filter.h  FilterBank.cpp  FilterBank.h  FilterControl.h  Flanger.cpp  Flanger.h  FxBase.cpp  FxBase.h  FxBaseCollector.cpp  FxBaseRunner.cpp  FxBaseTypeList.cpp  FxChorus.cpp  FxChorus.h  FxChorusParam.h  FxEarlyReflection.cpp  FxEarlyReflection.h  FxEarlyReflectionParam.h  FxEcho.cpp  FxEcho.h  FxEchoParam.h  FxFactory.cpp  FxFilter.cpp  FxFilter.h  FxFilterParam.h  (+32 more)
yacynth/src/include/: Ebuffer.h  Serialize.h  StartParams.h  logDefs.h  nsleep.h  v4.h  yacynth_globals.h  yacynth_results.h
yacynth/src/message/: Midi.cpp  Midi.h  yamsg.h
yacynth/src/net/: Server.cpp  Server.h
yacynth/src/oscillator/: BaseOscillator.cpp  BaseOscillator.h  Lfo.h  Mapping.h  NoiseFrame.h  NoiseFrame.h-save  NoiseSample.h  Oscillator.cpp  Oscillator.h  OscillatorArray.cpp  OscillatorArray.h  OscillatorNoiseFloat.h  OscillatorNoiseInt.h  OscillatorOutput.cpp  OscillatorOutput.h  Tables.cpp  Tables.h  ToneShaper.h  ToneShaperMatrix.cpp  ToneShaperMatrix.h
yacynth/src/router/: AbstractRouter.cpp  AbstractRouter.h  ControlQueue.cpp  ControlQueue.h  MidiTuning.cpp  MidiTuning.h  Router.cpp  Router.h  SimpleMidiRouter.cpp  SimpleMidiRouter.h  TuningTables.cpp  TuningTables.h  TuningTablesFill.cpp  TuningTablesInternal.cpp  TuningTablesModalScales.cpp
yacynth/src/sequencer/: Osc.h
yacynth/src/settings/: EchoTaps.cpp  EchoTaps.h  ToneShaperTemplates.cpp
yacynth/src/utils/: Barks.cpp  Barks.h  Biquad.h  BiquadMath.cpp  BiquadMath.h  BurningWood.h  Fastexp.cpp  Fastexp.h  Fastsincos.cpp  Fastsincos.h  Filter4Pole.h  Filter4PoleInteger.h  FilterAllpass.h  FilterAllpassTimeVar.h  FilterBase.cpp  FilterBase.h  FilterComb.h  FilterStateVariable.h  GaloisNoiser.cpp  GaloisNoiser.h  Limiters.cpp  Limiters.h  Primes.cpp  Primes.h
yacynth/src/yaio/: CycleCount.h  IOthread.cpp  IOthread.h  YaIo.cpp  YaIo.h  YaIoAlsa.cpp  YaIoAlsa.h  YaIoInQueue.cpp  YaIoInQueue.h  YaIoJack.cpp  YaIoJack.h  YaIoJackPort.cpp  YaIoJackPort.h
yacynth/tests/: MainTest.cpp
yacynth_build/: Makefile  yacynth
